# FundCast

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHECKPOINTS.md  CLAUDE.md  COMPLETE_TRANSFORMATION_SUMMARY.md  CONTRIBUTING.md  Dockerfile  ENTERPRISE_UPGRADE.md  EXECUTION_STRATEGY.md  FEATURE_SHOWCASE.md  LICENSE  MARKET_DOMINATION_GAMEPLAN.md  Makefile  PROJECT_BRIEF.md  PURPLE_TIER_STRATEGY.md  README.md  RED_TEAM_AI_DEFENSE_STRATEGY.md  SECURITY.md  TASKS.md  UPGRADE_NOTES.md  cleanup_report.md  docker-compose.yml  mutmut.toml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt  test_purple_tier_flow.py  validate_purple_tier_integration.py
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.yml  redis.conf  setup.sh
.devcontainer/init-scripts/: 01-init-db.sql
.github/workflows/: ai-testing.yml  ci-cd.yml  ci.yml  deploy.yml  documentation.yml  maintenance.yml  release.yml  security.yml
docs/api/: openapi.yaml
src/ai_inference/: __init__.py  semantic_search.py
src/api/: __init__.py  async_tasks.py  cache.py  config.py  database.py  database_optimization.py  exceptions.py  main.py  middleware.py
src/api/auth/: __init__.py  middleware.py  router.py  security.py
src/api/compliance/: __init__.py  router.py
src/api/markets/: __init__.py  router.py
src/api/sre/: __init__.py  circuit_breaker.py  middleware.py  monitoring.py  slo_monitoring.py
src/api/subscriptions/: __init__.py  featuring.py  lemonsqueezy.py  models.py  router.py  service.py
src/api/users/: __init__.py  dependencies.py  router.py
src/data_pipeline/: __init__.py
src/security/: __init__.py  ai_defense_middleware.py  ai_threat_detector.py
src/ui/: App.tsx  README.md  index.ts
src/ui/components/: FeaturedFounders.tsx  PurpleTierPricing.tsx
src/ui/examples/: market-domination-demo.tsx  scene-system-example.tsx
src/ui/pages/: HomePage.tsx  PricingPage.tsx
tests/: test_integration.py
tests/benchmarks/: test_performance_benchmarks.py
tests/property/: test_property_based.py
